--- a/microservice-course/src/main/resources/application.yml
+++ b/microservice-course/src/main/resources/application.yml
@@ -1,27 +1,34 @@
-server:
-  port: 9090
-
 spring:
   application:
     name: msvc-course
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/courseDB
-    username: postgre
-    password: Postgrel123
-  jpa:
-    hibernate:
-      ddl-auto: create
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
   config:
     import: optional:configserver:http://localhost:8888
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+
+#server:
+  #port: 9090
+
+#spring:
+  #application:
+    #name: msvc-course
+  #datasource:
+    #driver-class-name: org.postgresql.Driver
+    #url: jdbc:postgresql://localhost:5433/courseDB2
+    #username: postgres
+    #password: sql123
+  #jpa:
+    #hibernate:
+      #ddl-auto: create
+    #database: postgresql
+    #database-platform: org.hibernate.dialect.PostgreSQLDialect
+  #config:
+    #import: optional:configserver:http://localhost:8888
+
+#eureka:
+  #instance:
+    #hostname: localhost
+  #client:
+    #service-url:
+      #defaultZone: http://localhost:8761/eureka
 
 
